Update license to MIT, add LICENSE file and update pom.xml